[package]
name = "pg-interval-sql-json-binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pg_interval = "0.4.2"
postgres-types = "0.2.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
