[package]
name = "pg-interval-sql-json-binding"
description = "Postgres SQL and Serde JSON binding for crates/pg_interval"
version = "1.0.0"
license-file = "LICENSE"
repository = "https://github.com/techbech/pg-interval-sql-json-binding"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pg_interval = "0.4.2"
postgres-types = "0.2.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
